# waytray

./: Cargo.toml
waytray-client/: Cargo.toml
waytray-daemon/: Cargo.toml
