[workspace]
resolver = "2"
members = ["waytray-daemon", "waytray-client"]

[workspace.package]
version = "1.0.6"
edition = "2021"
license = "MIT"
authors = ["WayTray Contributors"]

[workspace.dependencies]
# D-Bus
zbus = "5"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"
