[package]
name = "waytray-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "GTK4 client for WayTray - accessible system tray window"

[[bin]]
name = "waytray"
path = "src/main.rs"

[dependencies]
# Shared types from daemon
waytray-daemon = { path = "../waytray-daemon" }

# D-Bus
zbus = { workspace = true }

# GTK4
gtk4 = { version = "0.10", features = ["v4_12"] }
gdk4 = "0.10"
gdk-pixbuf = "0.21"
glib = "0.21"
gio = "0.21"

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async utilities
futures = "0.3"
async-channel = "2"

# Wayland layer shell support (for overlay windows)
gtk4-layer-shell = "0.6"
