[package]
name = "waytray-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Daemon component for WayTray - caches system tray items via StatusNotifierItem"

[lib]
name = "waytray_daemon"
path = "src/lib.rs"

[[bin]]
name = "waytray-daemon"
path = "src/main.rs"

[dependencies]
# D-Bus
zbus = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async utilities
futures = "0.3"
async-trait = "0.1"
tokio-util = "0.7"

# Configuration
toml = "0.8"
dirs = "5"

# Desktop notifications
notify-rust = "4"

# Date/time
chrono = "0.4"

# HTTP client for weather API
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2"

# File watching for config hot reload
notify = "8"

# Audio playback for notifications
gstreamer = "0.25"
